--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -6,35 +6,46 @@ body {
   .container {
 	  display: flex;
 	  height: 100vh;
+	
+	}
+	
+	.chat-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 30px;
+		margin-left: 30px;
+		margin-right: 20px;
 	}
 	
 	.Chat {
-	  width: 200px;
-	  margin-left: 30px;
-	  margin-top: 35px;
-	  background-color: #9c9595;
-	  padding: 10px;
-	  border-radius: 50px;
-	  display: flex;
-	  flex-direction: column;
-	  justify-content: space-between;
-	  height: 10%;
-	  box-shadow: -5px 5px 12px rgba(0, 0, 0, 0.712);
+		width: 220px; /* plus petit que .chat-section */
+		background-color: #9c9595;
+		padding: 20px;
+		border-radius: 50px;
+		box-shadow: -5px 5px 12px rgba(0, 0, 0, 0.712);
+		margin-bottom: 20px;
+		text-align: center;
 	}
-
-  .chat-section {
-	width: 200px;
-	margin-left: 20px;
-	margin-top: 235px;
-	background-color: #9c9595;
-	padding: 100px;
-	border-radius: 50px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 50%;
-	box-shadow: -5px 5px 12px rgba(0, 0, 0, 0.712);
-  }
+	
+	  
+	.Chat h2 {
+		margin: 0;
+		font-size: 42px;
+		font-family: 'Patrick Hand', cursive;
+	}
+	
+	.chat-section {
+		width: 280px; /* légèrement plus large */
+		height: 73%;
+		background-color: #9c9595;
+		padding: 40px;
+		border-radius: 50px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		box-shadow: -5px 5px 12px rgba(0, 0, 0, 0.712);
+	}
   
   
   .chat-section h2 {
