--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -769,6 +769,10 @@ video {
   height: calc(100% - 100px);
 }
 
+.h-\[calc\(100\%-75px\)\] {
+  height: calc(100% - 75px);
+}
+
 .h-full {
   height: 100%;
 }
@@ -1034,6 +1038,11 @@ video {
   border-color: rgb(255 255 255 / 0.3);
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1100,6 +1109,11 @@ video {
 
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
+}
+
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
